styles.css
/* ... */
.pointsChart {
  position: relative;
  padding: 5px;
}
.points {
  /* // width: 100%; */
  height: 100%;
  box-sizing: border-box;
  border-right: 3px solid var(--silver);
  position: absolute;
  top: 0;
  left: 0;
}
.points.gold {
  border-color: var(--gold);
}
.points.silver {
  border-color: var(--silver);
}
.points.bronze {
  border-color: var(--bronze);
}

.row.scene2 .points {
  background-color: var(--point-bg);
}

.right {
  text-align: right;
  /* font-weight: bold; */
}

#Intro {
  background-color: var(--sidebar-bg);
}

#Credits {
  margin-top: 4em;
  background-color: var(--sidebar-bg);
  padding: 1em 2em;
  border-top: 1px solid var(--darkline);
}

.emphasis {
  color: var(--brighttext);
  font-weight: 600;
}
.rival {
  display: inline-flex;
  align-items: center;
  gap: 0.3em;
  vertical-align: middle;
}

@media (max-width: 900px) {
  #Main {
    width: 100%;
  }
  #Sidebar {
    display: none;
  }
  .scene {
    padding: 0.5em 1em;
  }
  .row {
    grid-template-columns: 1fr 3fr 4fr;
  }
  .rival {
    display: block;
  }
  .scene2row {
    grid-template-columns: 1fr 1fr;
  }
  .scene3row {
    grid-template-columns: auto 1fr;
    gap: 2em;
  }
  .race.small::before {
    padding-right: 1px;
    font-size: 0.7em;
  }
  #Credits {
    padding: 1em;
  }
  #Legend {
    padding: 1em;
  }
}

